# moggu

./: .gitignore  Cargo.toml  README.md  test_artistic.sh  test_color.sh  test_enhancement.sh  test_enhancement_tui.sh  test_everything.sh  test_full_nohyperfine.sh  test_geometry.sh  test_utility.sh
docs/: index.html
src/: artistic.rs  basic.rs  color.rs  enhancement.rs  geometric.rs  lib.rs  main.rs  utility.rs
