[package]
name = "moggu"
version = "0.1.1"
edition = "2024"
authors = ["Aditya Mandal <mandaladitya1614@gmail.com>"]
license = "MIT"
description = "A lightning-fast TUI image processing tool with 21+ professional filters in under 200ms"
homepage = "https://github.com/Aditya-1304/moggu"
repository = "https://github.com/Aditya-1304/moggu"
readme = "README.md"
keywords = ["image", "processing", "tui", "filters", "terminal"]
categories = ["multimedia::images", "command-line-utilities"]
exclude = [
  "dev-tools/",
  "test_images/",
  "*.jpeg",
  "*.png",
  "*.txt",
  "*.ppm",
  "*.sh"
]

[[bin]]
name = "moggu"
path = "src/main.rs"


[dependencies]
base64 = "0.22.1"
crossterm = "0.29.0"
image = "0.25.6"
rand = "0.9.2"
ratatui = "0.29.0"
rayon = "1.10.0"
rfd = "0.15.4"
tokio = { version = "1.47.1", features = ["full"]}
